irqchip/sun20i: Add Allwinner D1 stacked INTC driver
The D1 SoC uses the RISC-V PLIC as its main interrupt controller, but
the PLIC does not provide any interface for configuring IRQ trigger type
or wakeup capability. So Allwinner added registers in a separate MMIO
region (RISCV_CFG) to support these features.

Neither of those features is needed at the moment: most peripherals use
level interrupts, and RISC-V Linux does not yet support system suspend.
Plus, there are some complications with this extra MMIO region requiring
clocks/resets to access, which are not available during of_irq_init().

However, adding this irqchip later would break devicetree compatibility,
so at least a stub driver is needed for now.

Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/drivers/irqchip/Makefile
+++ b/drivers/irqchip/Makefile
@@ -97,6 +97,7 @@ obj-$(CONFIG_CSKY_APB_INTC)		+= irq-csky-apb-intc.o
 obj-$(CONFIG_RISCV_INTC)		+= irq-riscv-intc.o
 obj-$(CONFIG_RISCV_ACLINT_SWI)		+= irq-riscv-aclint-swi.o
 obj-$(CONFIG_SIFIVE_PLIC)		+= irq-sifive-plic.o
+obj-$(CONFIG_SUN20I_INTC)		+= irq-sun20i.o
 obj-$(CONFIG_IMX_IRQSTEER)		+= irq-imx-irqsteer.o
 obj-$(CONFIG_IMX_INTMUX)		+= irq-imx-intmux.o
 obj-$(CONFIG_MADERA_IRQ)		+= irq-madera.o
