--- a/drivers/irqchip/Kconfig
+++ b/drivers/irqchip/Kconfig
@@ -548,6 +548,9 @@ config SIFIVE_PLIC
 
 	   If you don't know what to do here, say Y.
 
+config SUN20I_INTC
+	bool
+
 config EXYNOS_IRQ_COMBINER
 	bool "Samsung Exynos IRQ combiner support" if COMPILE_TEST
 	depends on (ARCH_EXYNOS && ARM) || COMPILE_TEST
