--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -252,7 +252,7 @@ config ARCH_RV64I
 	select HAVE_FTRACE_MCOUNT_RECORD if !XIP_KERNEL
 	select HAVE_FUNCTION_GRAPH_TRACER
 	select HAVE_FUNCTION_TRACER if !XIP_KERNEL
-	select SWIOTLB if MMU
+	# select SWIOTLB if MMU
 
 endchoice
 
