--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -188,6 +188,9 @@ config ARCH_SELECT_MEMORY_MODEL
 config ARCH_SUPPORTS_UPROBES
 	def_bool y
 
+config ARCH_SUSPEND_POSSIBLE
+	def_bool y
+
 config STACKTRACE_SUPPORT
 	def_bool y
 
