irqchip: Add ACLINT software interrupt driver
The RISC-V ACLINT defines MSWI and SSWI devices for M-mode and S-mode
software interrupts respectively. We add irqchip driver which provide
IPI operations based on ACLINT [M|S]SWI devices to the Linux RISC-V
kernel.

Signed-off-by: Anup Patel <apatel@ventanamicro.com>

--- a/drivers/irqchip/Kconfig
+++ b/drivers/irqchip/Kconfig
@@ -526,6 +526,15 @@ config RISCV_INTC
 
 	   If you don't know what to do here, say Y.
 
+config RISCV_ACLINT_SWI
+	bool "RISC-V Advanced Core Local Interruptor Software Interrupts"
+	depends on RISCV
+	help
+	   This enables support for software interrupts using the Advanced
+	   Core Local Interruptor (ACLINT) found in RISC-V systems.  The
+	   RISC-V ACLINT provides devices for inter-process interrupt and
+	   timer functionality.
+
 config SIFIVE_PLIC
 	bool "SiFive Platform-Level Interrupt Controller"
 	depends on RISCV
