riscv: adjust D1 device trees
- fixed memory configuration
- mbus/dram controller workaround

Signed-off-by: Daniel Maslowski <info@orangecms.org>

--- a/arch/riscv/boot/dts/allwinner/sun20i-d1.dtsi
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1.dtsi
@@ -814,6 +814,7 @@
 
 		// TODO: write a binding and driver.
 		mbus: dram-controller@3102000 {
+      status = "disabled";
 			compatible = "allwinner,sun20i-d1-mbus";
 			reg = <0x3102000 0x200000>;
 			#address-cells = <1>;
