riscv: refresh D1 defconfig for 5.19 - fixup with Wi-Fi
Signed-off-by: Daniel Maslowski <info@orangecms.org>

--- a/arch/riscv/configs/d1_defconfig
+++ b/arch/riscv/configs/d1_defconfig
@@ -41,6 +41,8 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_CPU_IDLE=y
+CONFIG_RISCV_SBI_CPUIDLE=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR is not set
 # CONFIG_COMPAT_32BIT_TIME is not set
@@ -63,6 +65,7 @@ CONFIG_INET=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_PRIO=y
+CONFIG_CFG80211=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_DEBUG=y
 # CONFIG_ETHTOOL_NETLINK is not set
@@ -112,6 +115,7 @@ CONFIG_WIZNET_W5100=y
 CONFIG_WIZNET_W5100_SPI=y
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=y
+CONFIG_MDIO_SUN4I=y
 # CONFIG_USB_NET_DRIVERS is not set
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 # CONFIG_WLAN_VENDOR_ATH is not set
@@ -123,6 +127,7 @@ CONFIG_REALTEK_PHY=y
 # CONFIG_WLAN_VENDOR_MARVELL is not set
 # CONFIG_WLAN_VENDOR_MEDIATEK is not set
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
+# CONFIG_WLAN_VENDOR_PURELIFI is not set
 # CONFIG_WLAN_VENDOR_RALINK is not set
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_SILABS is not set
@@ -240,8 +245,6 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_9P_FS=y
 CONFIG_9P_FS_POSIX_ACL=y
 CONFIG_9P_FS_SECURITY=y
-CONFIG_CRYPTO=y
-CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_HMAC=y
 CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_LZO=y
