--- a/arch/riscv/configs/d1_defconfig
+++ b/arch/riscv/configs/d1_defconfig
@@ -41,6 +41,8 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_CPU_FREQ=y
+CONFIG_SUN50I_CPUFREQ_NVMEM=y
 CONFIG_CPU_IDLE=y
 CONFIG_RISCV_SBI_CPUIDLE=y
 CONFIG_JUMP_LABEL=y
@@ -66,6 +68,7 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CFG80211=y
+CONFIG_MAC80211=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_DEBUG=y
 # CONFIG_ETHTOOL_NETLINK is not set
@@ -151,6 +154,7 @@ CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
 CONFIG_HVC_RISCV_SBI=y
 # CONFIG_I2C_COMPAT is not set
+CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_I2C_MV64XXX=y
 CONFIG_SPI=y
@@ -176,14 +180,21 @@ CONFIG_WATCHDOG_SYSFS=y
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
-CONFIG_MEDIA_CEC_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_DRM=y
 CONFIG_DRM_SUN4I=y
 # CONFIG_DRM_SUN4I_HDMI is not set
 # CONFIG_DRM_SUN4I_BACKEND is not set
+CONFIG_DRM_SUN6I_DSI=y
 CONFIG_DRM_SUN8I_DW_HDMI=y
 CONFIG_DRM_SUN8I_MIXER=y
+CONFIG_DRM_PANEL_SITRONIX_ST7701=y
+CONFIG_DRM_PANEL_SITRONIX_ST7701S=y
+CONFIG_DRM_PANEL_SITRONIX_ST7703=y
+CONFIG_DRM_PANEL_SITRONIX_ST7789V=y
 CONFIG_FB=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_BACKLIGHT_PWM=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
@@ -201,6 +212,7 @@ CONFIG_USB_MUSB_SUNXI=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_MMC=y
+CONFIG_MMC_SPI=y
 CONFIG_MMC_SUNXI=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -220,6 +232,10 @@ CONFIG_DMADEVICES=y
 CONFIG_DMA_SUN6I=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
+CONFIG_STAGING=y
+CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_SUNXI=y
+CONFIG_VIDEO_SUNXI_CEDRUS=y
 CONFIG_SUN8I_DE2_CCU=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_SUN6I=y
@@ -230,9 +246,12 @@ CONFIG_REMOTEPROC_CDEV=y
 CONFIG_SUN8I_DSP_REMOTEPROC=y
 CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_VIRTIO=y
+CONFIG_PM_DEVFREQ=y
+CONFIG_ARM_SUN50I_R329_MBUS_DEVFREQ=y
+CONFIG_PWM=y
+CONFIG_PWM_SUN8I_V536=y
 CONFIG_RISCV_ACLINT_SWI=y
 CONFIG_PHY_SUN4I_USB=y
-CONFIG_PHY_SUN6I_MIPI_DPHY=y
 CONFIG_NVMEM_SUNXI_SID=y
 # CONFIG_DNOTIFY is not set
 CONFIG_FANOTIFY=y
@@ -258,7 +277,6 @@ CONFIG_CRYPTO_DEV_SUN8I_CE=y
 CONFIG_CRYPTO_DEV_SUN8I_CE_HASH=y
 CONFIG_CRYPTO_DEV_SUN8I_CE_PRNG=y
 CONFIG_CRYPTO_DEV_SUN8I_CE_TRNG=y
-CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
