riscv: add PWM regulator to d1 defconfig
Signed-off-by: Daniel Maslowski <info@orangecms.org>

--- a/arch/riscv/configs/d1_defconfig
+++ b/arch/riscv/configs/d1_defconfig
@@ -183,6 +183,7 @@ CONFIG_WATCHDOG_SYSFS=y
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_PWM=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_DRM=y
 CONFIG_DRM_SUN4I=y
