--- a/tools/vm/Makefile
+++ b/tools/vm/Makefile
@@ -19,7 +19,7 @@ $(LIBS):
 	make -C $(LIB_DIR)
 
 %: %.c
-	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
+	$(CC) $(CFLAGS) -s -static -o $@ $< $(LDFLAGS)
 
 clean:
 	$(RM) page-types slabinfo page_owner_sort
