riscv: WIP: OTG for D1 in DT
Signed-off-by: Daniel Maslowski <info@orangecms.org>

--- a/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi15.dts
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi15.dts
@@ -246,3 +246,18 @@
 &usbphy {
 	usb1_vbus-supply = <&reg_vcc>;
 };
+
+&usb_otg {
+	dr_mode = "otg";
+	status = "okay";
+};
+/*
+&usbotg {
+        vbus-supply = <&reg_5p0v>;
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_usbotg>;
+        disable-over-current;
+        dr_mode = "peripheral";
+        status = "okay";
+};
+*/
