--- a/arch/riscv/boot/dts/allwinner/sun20i-d1-lichee-rv-dock.dts
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1-lichee-rv-dock.dts
@@ -167,6 +167,14 @@
 	status = "okay";
 };
 
+&ohci0 {
+	status = "disabled";
+};
+
+&ehci0 {
+	status = "disabled";
+};
+
 &ohci1 {
 	status = "okay";
 };
@@ -185,3 +193,9 @@
 	dr_mode = "peripheral";
 	status = "okay";
 };
+
+// &usbphy {
+//   usb0_vbus-supply = <&reg_vcc>;
+//   usb0_vbus_det-gpios = <&gpio 3 20 GPIO_ACTIVE_HIGH>; /* PD20 */
+//   status = "okay";
+// };
