--- a/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi15.dts
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi15.dts
@@ -208,6 +208,14 @@
 	status = "okay";
 };
 
+&ohci0 {
+	status = "disabled";
+};
+
+&ehci0 {
+	status = "disabled";
+};
+
 &ohci1 {
 	status = "okay";
 };
@@ -248,16 +256,12 @@
 };
 
 &usb_otg {
-	dr_mode = "otg";
+	dr_mode = "peripheral";
 	status = "okay";
 };
-/*
-&usbotg {
-        vbus-supply = <&reg_5p0v>;
-        pinctrl-names = "default";
-        pinctrl-0 = <&pinctrl_usbotg>;
-        disable-over-current;
-        dr_mode = "peripheral";
-        status = "okay";
+
+&usbphy {
+	usb0_vbus-supply = <&reg_vcc>;
+	usb0_vbus_det-gpios = <&gpio 3 20 GPIO_ACTIVE_HIGH>; /* PD20 */
+	status = "okay";
 };
-*/
