--- a/arch/riscv/configs/d1_defconfig
+++ b/arch/riscv/configs/d1_defconfig
@@ -37,7 +37,7 @@ CONFIG_SMP=y
 CONFIG_RISCV_SBI_V01=y
 CONFIG_KEXEC=y
 CONFIG_KEXEC_FILE=y
-CONFIG_CMDLINE="console=tty0 console=ttyS0,115200 loglevel=7 earlycon=sbi cma=24M"
+CONFIG_CMDLINE="console=tty0 console=ttyS0,115200 loglevel=7 earlycon=sbi cma=24M g_ether.dev_addr=02:3b:00:70:d1:0a g_ether.host_addr=02:3b:00:70:d1:0b"
 # CONFIG_EFI is not set
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
@@ -193,13 +193,11 @@ CONFIG_DRM_SUN4I=y
 CONFIG_DRM_SUN6I_DSI=y
 CONFIG_DRM_SUN8I_DW_HDMI=y
 CONFIG_DRM_SUN8I_MIXER=y
-CONFIG_DRM_PANEL_SITRONIX_ST7701=y
-CONFIG_DRM_PANEL_SITRONIX_ST7701S=y
-CONFIG_DRM_PANEL_SITRONIX_ST7703=y
 CONFIG_DRM_PANEL_SITRONIX_ST7789V=y
 CONFIG_FB=y
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_GPIO=y
+CONFIG_BACKLIGHT_LED=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
@@ -221,9 +219,15 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_MUSB_HDRC=y
+CONFIG_USB_MUSB_GADGET=y
 CONFIG_USB_MUSB_SUNXI=y
+CONFIG_MUSB_PIO_ONLY=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
+CONFIG_USB_ETH=y
+CONFIG_USB_ETH_EEM=y
+CONFIG_USB_CDC_COMPOSITE=y
+CONFIG_USB_ROLE_SWITCH=y
 CONFIG_MMC=y
 CONFIG_MMC_SPI=y
 CONFIG_MMC_SUNXI=y
@@ -249,6 +253,9 @@ CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=y
+CONFIG_FB_TFT=y
+CONFIG_FB_TFT_ST7735R=y
+CONFIG_FB_TFT_ST7789V=y
 CONFIG_SUN8I_DE2_CCU=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_SUN6I=y
@@ -275,7 +282,6 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_INODE64=y
 CONFIG_HUGETLBFS=y
-CONFIG_CONFIGFS_FS=y
 CONFIG_9P_FS=y
 CONFIG_9P_FS_POSIX_ACL=y
 CONFIG_9P_FS_SECURITY=y
