--- a/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi154.dts
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi154.dts
@@ -98,6 +98,8 @@
 		reset-gpios = <&gpio 6 12 GPIO_ACTIVE_LOW>; /* PG12 */
 	};
 
+  // see https://gist.github.com/rickyzhang82/8581a762c9f9fc6ddb8390872552c250
+  // for key code table (fbcon)
 	gpio-keys {
 			compatible = "gpio-keys";
 			autorepeat;
@@ -113,38 +115,66 @@
 					linux,code = <108>;
 					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
 			};
-      // TODO :)
-      /*
+
       left {
           label = "GPIO Key LEFT";
           linux,code = <105>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 11 GPIO_ACTIVE_LOW>;
       };
 
       right {
           label = "GPIO Key RIGHT";
           linux,code = <106>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 12 GPIO_ACTIVE_LOW>;
       };
 
-      esc-key {
-          label = "GPIO Key ESC";
+      select {
+          label = "GPIO Key ESC / SELECT";
           linux,code = <1>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 3 17 GPIO_ACTIVE_LOW>;
       };
 
-      ctrl-lft {
-          label = "GPIO Key LEFTCTRL";
-          linux,code = <29>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
-      };
-
-      enter {
-          label = "GPIO Key ENTER";
+      start {
+          label = "GPIO Key ENTER / START";
           linux,code = <28>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 6 GPIO_ACTIVE_LOW>;
       };
-      */
+
+      a {
+          label = "GPIO Key A";
+          linux,code = <30>;
+					gpios = <&gpio 1 4 GPIO_ACTIVE_LOW>;
+      };
+
+      b {
+          label = "GPIO Key B";
+          linux,code = <48>;
+					gpios = <&gpio 1 3 GPIO_ACTIVE_LOW>;
+      };
+
+      x {
+          label = "GPIO Key X";
+          linux,code = <45>;
+					gpios = <&gpio 1 9 GPIO_ACTIVE_LOW>;
+      };
+
+      y {
+          label = "GPIO Key Y";
+          linux,code = <21>;
+					gpios = <&gpio 2 0 GPIO_ACTIVE_LOW>;
+      };
+
+      topleft {
+          label = "GPIO Key PAGE UP / TOP LEFT";
+          linux,code = <104>;
+					gpios = <&gpio 1 8 GPIO_ACTIVE_LOW>;
+      };
+
+      topright {
+          label = "GPIO Key PAGE DOWN / TOP RIGHT";
+          linux,code = <109>;
+					gpios = <&gpio 1 1 GPIO_ACTIVE_LOW>;
+      };
   };
 };
 
@@ -265,21 +295,30 @@
   num-cs = <1>;
 
   panel@0 {
-    compatible = "sitronix,st7735r";
-    verbose = <3>;
+    compatible = "sitronix,st7789v";
     buswidth = <0x8>;
     reg = <0>;
     reset-gpios = <&gpio 3 22 GPIO_ACTIVE_LOW>; /* PD22 */
     dc-gpios = <&gpio 2 1 GPIO_ACTIVE_HIGH>; /* PC1 */
+    // led-gpios = <&gpio 3 14 GPIO_ACTIVE_HIGH>; /* PD14 */
+    led-gpios = <&gpio 6 13 GPIO_ACTIVE_HIGH>; /* PG13 dummy */
     spi-max-frequency = <24000000>;
     width = <240>;
     height = <240>;
     txbuflen = <32768>;
     spi-cpol;
     spi-cpha;
-    rotate = <90>;
+    rotate = <180>;
     fps = <25>;
     status = "okay";
+
+    /*
+    port {
+        panel_in_tcon_lcd0: endpoint {
+          remote-endpoint = <&tcon_lcd0_out_panel>;
+        };
+    };
+    */
   };
 };
 
