--- a/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi154.dts
+++ b/arch/riscv/boot/dts/allwinner/sun20i-d1-mangopi-gpi154.dts
@@ -107,19 +107,19 @@
 			up {
 					label = "GPIO Key UP";
 					linux,code = <103>;
-					gpios = <&gpio 1 2 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
 			};
 
 			down {
 					label = "GPIO Key DOWN";
 					linux,code = <108>;
-					gpios = <&gpio 1 10 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 11 GPIO_ACTIVE_LOW>;
 			};
 
       left {
           label = "GPIO Key LEFT";
           linux,code = <105>;
-					gpios = <&gpio 1 11 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 2 GPIO_ACTIVE_LOW>;
       };
 
       right {
@@ -131,13 +131,13 @@
       select {
           label = "GPIO Key ESC / SELECT";
           linux,code = <1>;
-					gpios = <&gpio 3 17 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 1 6 GPIO_ACTIVE_LOW>;
       };
 
       start {
           label = "GPIO Key ENTER / START";
           linux,code = <28>;
-					gpios = <&gpio 1 6 GPIO_ACTIVE_LOW>;
+					gpios = <&gpio 3 17 GPIO_ACTIVE_LOW>;
       };
 
       a {
@@ -214,11 +214,6 @@
 		pins = "PE17";
 		function = "dmic";
 	};
-
-	ledc_pc0_pin: ledc-pc0-pin {
-		pins = "PC0";
-		function = "ledc";
-	};
 };
 
 &hdmi {
@@ -233,18 +228,6 @@
 
 &hdmi_phy {
 	status = "okay";
-};
-
-&ledc {
-	pinctrl-0 = <&ledc_pc0_pin>;
-	pinctrl-names = "default";
-	status = "okay";
-
-	led@0 {
-		reg = <0x0>;
-		color = <LED_COLOR_ID_RGB>;
-		function = LED_FUNCTION_STATUS;
-	};
 };
 
 &mmc1 {
@@ -270,23 +253,15 @@
 	status = "okay";
 };
 
+&uart0 {
+	status = "disabled";
+};
+
 &uart1 {
 	pinctrl-0 = <&uart1_pg6_pins>, <&uart1_pg8_rts_cts_pins>;
 	pinctrl-names = "default";
 	status = "okay";
 };
-/*
-&tcon_lcd0 {
-	pinctrl-0 = <&lcd_rgb666_pins>;
-	pinctrl-names = "default";
-};
-
-&tcon_lcd0_out {
-	tcon_lcd0_out_panel: endpoint {
-		remote-endpoint = <&panel_in_tcon_lcd0>;
-	};
-};
-*/
 
 &spi1 {
   pinctrl-0 = <&spi1_pd_pins>;
@@ -300,8 +275,6 @@
     reg = <0>;
     reset-gpios = <&gpio 3 22 GPIO_ACTIVE_LOW>; /* PD22 */
     dc-gpios = <&gpio 2 1 GPIO_ACTIVE_HIGH>; /* PC1 */
-    // led-gpios = <&gpio 3 14 GPIO_ACTIVE_HIGH>; /* PD14 */
-    led-gpios = <&gpio 6 13 GPIO_ACTIVE_HIGH>; /* PG13 dummy */
     spi-max-frequency = <24000000>;
     width = <240>;
     height = <240>;
@@ -311,14 +284,6 @@
     rotate = <180>;
     fps = <25>;
     status = "okay";
-
-    /*
-    port {
-        panel_in_tcon_lcd0: endpoint {
-          remote-endpoint = <&tcon_lcd0_out_panel>;
-        };
-    };
-    */
   };
 };
 
