riscv: add RFKILL to D1 defconfig
Signed-off-by: Daniel Maslowski <info@orangecms.org>

--- a/arch/riscv/configs/d1_defconfig
+++ b/arch/riscv/configs/d1_defconfig
@@ -74,6 +74,8 @@ CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
+CONFIG_RFKILL=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_DEBUG=y
 CONFIG_DEVTMPFS=y
@@ -165,6 +167,7 @@ CONFIG_SPI=y
 CONFIG_SPI_MEM=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_SUN6I=y
+CONFIG_SPI_MUX=y
 CONFIG_SPI_SPIDEV=y
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_PINCTRL=y
@@ -193,7 +196,7 @@ CONFIG_DRM_SUN4I=y
 CONFIG_DRM_SUN6I_DSI=y
 CONFIG_DRM_SUN8I_DW_HDMI=y
 CONFIG_DRM_SUN8I_MIXER=y
-CONFIG_DRM_PANEL_SITRONIX_ST7789V=y
+CONFIG_TINYDRM_ST7735R=y
 CONFIG_FB=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_GPIO=y
